<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    >


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
...
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/search_fields_by_neighborhood"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#882446"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/MyReserveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AviliableBtn" />

    <Button
        android:id="@+id/MyReserveBtn"
...
